test/diagnostics/testable-printast-locations.code
// RUN: %empty-directory(%t)
// RUN: %target-language-frontend -emit-module -module-name ModuleA -emit-module-path %t/ModuleA.codemodule -primary-file %S/Inputs/TestablePrintASTLocationsModule.code -enable-testing
// RUN: %target-language-frontend -emit-module -module-name ModuleB -emit-module-path %t/ModuleB.codemodule -primary-file %S/Inputs/TestablePrintASTLocationsModule.code -enable-testing
// RUN: not %target-language-frontend -typecheck -I %t %s 2>&1 | %FileCheck %s

@testable import ModuleA
@testable import ModuleB

ambiguous()

// CHECK: testable-printast-locations.code:[[@LINE-2]]:1: error: ambiguous use of 'ambiguous()'
// CHECK: ModuleA.ambiguous:1:15: note: found this candidate in module 'ModuleA'
// CHECK: ModuleB.ambiguous:1:15: note: found this candidate in module 'ModuleB'
